# kicad-text-injector

./: .gitmodules  Cargo.lock.license  Cargo.toml  README.md  clippy.toml  generate_sources  git-version  kicad_replace_project_variables.py  kicad_text_injector.py  replace_vars.py  requirements.txt  test_replace_vars.py
.github/workflows/: build.yml  publish.yml  publish.yml.disabled  release.yml
scripts/: build  clean  env  install-dependencies-ubuntu  package  release  test
src/: kicad_quoter.rs  lib.rs  main.rs  replacer.rs
