# SPDX-FileCopyrightText: 2021-20232 Robin Vobruba <hoijui.quaero@gmail.com>
#
# SPDX-License-Identifier: Unlicense

[package]
name = "kicad-text-injector"
version = "0.2.4"
authors = ["Robin Vobruba <hoijui.quaero@gmail.com>"]
description = """
    A tiny CLI tool that replaces variables of the style `${KEY}`
    within KiCad PCB (pcbnew) files.
    """
license = "GPL-3.0-or-later"
repository = "https://github.com/hoijui/kicad-text-injector"
keywords = ["cli", "ci", "kicad"]
categories = ["command-line-utilities", "text-processing"]
edition = "2021"

[dependencies]
clap = { version = "4.0", features = ["cargo"] }
const_format = "0.2"
git-version = "0.3"
lazy_static = "1.4"
regex = "1"
repvar = { version = "0.9.0", git = "https://github.com/hoijui/repvar.git" }
