# SPDX-FileCopyrightText: 2021 - 2024 Robin Vobruba <hoijui.quaero@gmail.com>
#
# SPDX-License-Identifier: Unlicense

[package]
name = "kicad-text-injector"
version = "0.3.0"
authors = ["Robin Vobruba <hoijui.quaero@gmail.com>"]
description = """
    A tiny CLI tool that replaces variables of the style `${KEY}`
    within KiCad PCB (pcbnew) files.
    """
license = "GPL-3.0-or-later"
repository = "https://github.com/hoijui/kicad-text-injector"
homepage = "https://github.com/hoijui/kicad-text-injector"
keywords = ["cli", "ci", "kicad"]
categories = ["command-line-utilities", "text-processing"]
readme = "README.md"
edition = "2021"

[lints.rust]
rust_2021_compatibility = { level = "warn", priority = -1 }

[lints.clippy]
all = { level = "deny", priority = -1 }
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
cargo = { level = "warn", priority = -1 }
wildcard_enum_match_arm = "warn"
string_slice = "warn"
indexing_slicing = "warn"
clone_on_ref_ptr = "warn"
try_err = "warn"
shadow_reuse = "allow"
empty_structs_with_brackets = "warn"
else_if_without_else = "warn"
use_debug = "warn"
print_stdout = "warn"
print_stderr = "warn"
#default_trait_access = "allow"
option_if_let_else = "allow"

[dependencies]
clap = { version = "4.5", features = ["cargo", "derive"] }
cli_utils = { version = "0.7", package = "cli_utils_hoijui" }
const_format = "0.2"
git-version = "0.3"
lazy_static = "1.4"
regex = "1.10"
repvar = "0.13"
